--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -29,13 +29,14 @@ body {
   &--sub {
     display: block;
     font-size: 2rem;
-    font-weight: 700;
+    font-weight: 500;
     letter-spacing: 1.3rem;
 
     animation: moveInRight 2.5s ease-out;
 
     @include respond(phone) {
       letter-spacing: 0.5rem;
+      font-size: 3rem;
     }
   }
 }
